--- a/Lab_01.ipynb
+++ b/Lab_01.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlCYEsHC4lYulYdJKcy/57",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyMWfHyHWXreudrjih3b3wRK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,7 +15,7 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "TPU"
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -37,6 +38,19 @@
       "source": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "2.\tExplore all kinds /data types of variables. And  write code for each datatype.\n",
+        "                                                  # Integer variable\n",
+        "                                                  # Floating-point variable\n",
+        "                                                  # String variable\n",
+        "                                                   # Boolean variable\n"
+      ],
+      "metadata": {
+        "id": "HfmQ8UJkZCU9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Integer Variable\n",
@@ -51,7 +65,7 @@
         "id": "uN9jCu0Y0tak",
         "outputId": "fdc6baa9-9d21-46f1-a01a-d5f2d13885ad"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +92,7 @@
         "id": "uJFnJBkZ3Wik",
         "outputId": "4c784b7e-8217-4b76-fd56-ec1102f7e389"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +119,7 @@
         "id": "1m0VAVpy3u_K",
         "outputId": "f283f891-2e1e-4061-d01a-0d7fb2685360"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +146,7 @@
         "id": "OlCEfzaL4F_C",
         "outputId": "05e41f0d-2883-447d-a9a7-7cbe6af28d79"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,6 +157,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4.\tDeclare and initialize multiple variables in a single line . Single variable with multiple values , multiple variables with single values. Each having at least two examples"
+      ],
+      "metadata": {
+        "id": "AGpiP9UiZNtc"
+      }
     },
     {
       "cell_type": "code",
@@ -160,7 +183,7 @@
         "id": "jf0J5WXH_69f",
         "outputId": "c9f705d9-0fda-4f53-f25d-7b9a9a85b82e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +211,7 @@
         "id": "gsifMf-HAbDp",
         "outputId": "d6e54790-464f-4fc2-ddf3-612994e30b22"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,6 +222,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ".    Perform arithmetic operations on integers and floating-point numbers\n",
+        "                                         # Adding, Subtracting, Multiplication and dividing two integer variables\n"
+      ],
+      "metadata": {
+        "id": "PuL5ymW-ZQNA"
+      }
     },
     {
       "cell_type": "code",
@@ -224,7 +257,7 @@
         "id": "6Rq7lhvEA1En",
         "outputId": "dde7c16f-ce96-4a66-9074-3daddb221cf6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +295,7 @@
         "id": "iIiEWY96BRKt",
         "outputId": "05a3d895-8b55-4bc5-9e0f-eedf9a0e81a0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,6 +308,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6.\tA string literal is a sequence of characters enclosed in quotes. In Python, we can use either single quotes (‘…’) or double quotes (“…”) to create a string"
+      ],
+      "metadata": {
+        "id": "jj_YAPERZXBD"
+      }
     },
     {
       "cell_type": "code",
@@ -302,7 +344,7 @@
         "id": "kDu_eTtDBqCh",
         "outputId": "f830bd98-5d72-4d96-a5d8-832603d18166"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
