--- a/Lab_02_03_Datatypes_In_Python_py.ipynb
+++ b/Lab_02_03_Datatypes_In_Python_py.ipynb
@@ -168,7 +168,7 @@
         "\n",
         "**Electrical Engineering:**\n",
         "\n",
-        "In bold text AC (alternating current) circuit analysis, complex numbers are used to represent impedance, which combines resistance and reactance. The impedance of a circuit element can be represented as a complex number, where the real part represents resistance and the imaginary part represents reactance.\n",
+        "In AC (alternating current) circuit analysis, complex numbers are used to represent impedance, which combines resistance and reactance. The impedance of a circuit element can be represented as a complex number, where the real part represents resistance and the imaginary part represents reactance.\n",
         "\n",
         "Here is a code or python script for this example\n",
         "\n",
