--- a/Lab_02_03_Datatypes_In_Python_py.ipynb
+++ b/Lab_02_03_Datatypes_In_Python_py.ipynb
@@ -472,7 +472,7 @@
       "source": [
         "Task 08\n",
         "\n",
-        "Take input from user and  than display it like “John age is: age”"
+        "Take input from user and  than display it like “Moiz age is: age”"
       ],
       "metadata": {
         "id": "0zaOv4maM3J9"
