--- a/Lab_04_05_Lists_in_Python.ipynb
+++ b/Lab_04_05_Lists_in_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvaWInApZkr6E5M+7HqTb6",
+      "authorship_tag": "ABX9TyNj0qfomssUliROZmZAbyjg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "\n",
         "1.   Accessing List items\n",
         "2.   Change list items\n",
-        "3.   Add list items\n",
+        "3.   List Indexing (Positive and Negative)\n",
         "4.   Remove List items\n",
         "5.   Loop lists\n",
         "6.   List comprehensions\n",
@@ -51,10 +51,9 @@
         "8.   Copy list\n",
         "9.   Join list\n",
         "10.  List Methods\n",
-        "11.  Combining lists and lists comprehensions\n",
+        "11.  List Concatenation\n",
         "12.  Filtering and Sorting\n",
         "13.  List slicing and reversing\n",
-        "14.  Combining list and list methods\n",
         "\n"
       ],
       "metadata": {
@@ -64,8 +63,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Lab Task: 01**\n",
-        "# New Section\n",
+        "# **Lab Task: 01**\n",
+        "\n",
         "**Accessing list items**\n",
         "\n",
         "\n",
@@ -81,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -133,7 +132,7 @@
         "id": "k8lIntoP4mOc",
         "outputId": "bf724572-0dd4-4a74-d7aa-fa28f47fd2e0"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,6 +147,47 @@
       "cell_type": "markdown",
       "source": [
         "# **Lab Task: 03**\n",
+        "\n",
+        "**List Indexing**\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.   Positive Indexing: As we have seen that list items have index, as such we can access items using these indexes.\n",
+        "2.   Negative Indexing: As we have seen that list items have index, as such we can access items using these indexes.\n",
+        "    \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-19yzBjFjUCl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Postive Indexing\n",
+        "colors = [\"Red\", \"Green\", \"Blue\", \"Yellow\", \"Green\"]\n",
+        "#          [0]      [1]     [2]      [3]      [4]\n",
+        "print(colors[2])\n",
+        "print(colors[4])\n",
+        "print(colors[0])\n",
+        "\n",
+        "#Negative Indexing\n",
+        "colors = [\"Red\", \"Green\", \"Blue\", \"Yellow\", \"Green\"]\n",
+        "#[-5] [-4] [-3] [-2] [-1]\n",
+        "print(colors[-1])\n",
+        "print(colors[-3])\n",
+        "print(colors[-4])"
+      ],
+      "metadata": {
+        "id": "ZSvrYA1jjX7E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Lab Task: 04**\n",
         "\n",
         "**Add list items**\n",
         "\n",
@@ -172,7 +212,7 @@
         "id": "CDmPvrtg4svu",
         "outputId": "7fffcc4e-1d23-425e-cc50-188bed8e8ed5"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +226,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 04**\n",
+        "# **Lab Task: 05**\n",
         "\n",
         "**Remove List items**\n",
         "\n",
@@ -211,7 +251,7 @@
         "id": "jpK0_uB04_V8",
         "outputId": "3975c2c3-a033-4edb-9f19-b7876aaaa854"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +265,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 05**\n",
+        "# **Lab Task: 06**\n",
         "\n",
         "**Loop Lists**\n",
         "\n",
@@ -250,7 +290,7 @@
         "id": "FfkZuWka5Jdg",
         "outputId": "fecd942e-eaf8-41bd-cddf-2e132cf1ee21"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +307,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 06**\n",
+        "# **Lab Task: 07**\n",
         "\n",
         "**List Comprephesions**\n",
         "\n",
@@ -292,7 +332,7 @@
         "id": "xz-SfofW5Wz0",
         "outputId": "3d4bdc9c-c4ca-4a67-97f7-e7eeebdd1a0a"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +346,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 07**\n",
+        "# **Lab Task: 08**\n",
         "\n",
         "**Sort Lists**\n",
         "\n",
@@ -331,7 +371,7 @@
         "id": "SWEIOgAA5iM0",
         "outputId": "c5010987-b9a9-4cae-d9e2-e35a7fdfc283"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +385,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 08**\n",
+        "# **Lab Task: 09**\n",
         "\n",
         "**Copy Lists**\n",
         "\n",
@@ -370,7 +410,7 @@
         "id": "WXHkohkb5omO",
         "outputId": "0cc9c076-6225-4184-d01e-cec1bec2f0c8"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +424,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 09**\n",
+        "# **Lab Task: 10**\n",
         "\n",
         "**Join Lists**\n",
         "\n",
@@ -410,7 +450,7 @@
         "id": "RUabVJj254QV",
         "outputId": "ab63823e-72b6-47e2-87ec-0821bbeacc42"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +464,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 10**\n",
+        "# **Lab Task: 11**\n",
         "\n",
         "**Lists Method**\n",
         "\n",
@@ -452,7 +492,7 @@
         "id": "S1qm-I6f6Ahh",
         "outputId": "e19d2d79-bb15-4cf4-846d-475d1758ec5f"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,7 +507,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 11**\n",
+        "# **Lab Task: 12**\n",
         "\n",
         "**Combining list and list comprehensions**\n",
         "\n",
@@ -493,7 +533,7 @@
         "id": "BKRXoJVX6RDn",
         "outputId": "8a240e95-9c6b-46ba-800e-5b2c6ad2c7dc"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +547,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 12**\n",
+        "# **Lab Task: 13**\n",
         "\n",
         "**Filtering and sorting of List**\n",
         "\n",
@@ -534,7 +574,7 @@
         "id": "0sqoja3g6aqU",
         "outputId": "b6bd02f9-f13d-4680-f4ad-2023833e16db"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,7 +588,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 13**\n",
+        "# **Lab Task: 14**\n",
         "\n",
         "**List slicing and Reversing**\n",
         "\n",
@@ -573,7 +613,7 @@
         "id": "7yqJ47Xu6lSG",
         "outputId": "ff549b28-182c-4f0e-e85b-9883c0508636"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +627,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Lab Task: 14**\n",
+        "# **Lab Task: 15**\n",
         "\n",
         "**Combinging lists and lists method**\n",
         "\n",
@@ -616,7 +656,7 @@
         "id": "3_1BOcFY6-LQ",
         "outputId": "cdf251a4-0c9d-4d0d-948f-1db91ea91dbc"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
